[gd_scene load_steps=5 format=2]

[ext_resource path="res://tlo.png" type="Texture" id=1]
[ext_resource path="res://czcionka.tres" type="DynamicFont" id=2]
[ext_resource path="res://menu.gd" type="Script" id=3]
[ext_resource path="res://muzyczka.ogg" type="AudioStream" id=4]

[node name="menu" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ 72.0 ]
}

[node name="tlo" type="Sprite" parent="."]
position = Vector2( 576, 288 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_right = 1152.0
margin_bottom = 112.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0.678431, 0, 1 )
text = "Langton's Ant Adventures"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGame" type="MenuButton" parent="."]
margin_left = 64.0
margin_top = 192.0
margin_right = 290.0
margin_bottom = 262.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0.584314, 0, 1 )
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadGame" type="MenuButton" parent="."]
margin_left = 64.0
margin_top = 320.0
margin_right = 216.0
margin_bottom = 368.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0.584314, 0, 1 )
text = "Load Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="MenuButton" parent="."]
margin_left = 64.0
margin_top = 448.0
margin_right = 234.0
margin_bottom = 518.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0.584314, 0, 1 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 1.0
autoplay = true
[connection signal="gui_input" from="NewGame" to="." method="_on_NewGame_gui_input"]
[connection signal="gui_input" from="LoadGame" to="." method="_on_LoadGame_gui_input"]
[connection signal="gui_input" from="Settings" to="." method="_on_Settings_gui_input"]
